src/test/deca/codegen/invalid/ModuloZeroInt.deca
// Description:
//    Erreur du 11.1 : Modulo par zéro
//
// Resultats:
// Error: zero_division   

{
    int num = 1 % 0;
}
